@@ -42,7 +42,7 @@ $string['poodll:allowsnapshot'] = 'Allow Snapshot';
 $string['title'] = 'Create media file';
 $string['recordtheninsert'] = 'After recording, press insert.';
 $string['drawtheninsert'] = 'After drawing, press "Save Picture", then "Insert."';
-$string['snaptheninsert'] = 'After taking a picture, press insert.';
+$string['snaptheninsert'] = 'After taking a picture, press "Save", then "Insert."';
 $string['show_audiomp3'] = 'Show MP3 recorder';
 $string['show_audiored5'] = 'Show Audio recorder(red5)';
 $string['show_video'] = 'Show Video recorder';
