@@ -15,3 +15,37 @@
 	top: 0px;
 	margin: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+/**GLEN**/
+/*----- TinyMCE insert and cancel button-----*/
+
+#tinymce_poodll_container #insert{
+    color: #333 !important;
+    
+}
+#tinymce_poodll_container #cancel{
+    color: #333 !important;
+    
+}
+
+/*--- END ---*/
+
+
+/*end*/
+
+
+
+
+
+
+
+
