@@ -67,11 +67,12 @@ switch($recorder){
 	$instruction = get_string('recordtheninsert', 'tinymce_poodll');
  	break;
  case 'snapshot':
- 	$recorderhtml =  \filter_poodll\poodlltools::fetchSnapshotCameraforSubmission($updatecontrol, "apic.jpg",350,400,$usercontextid,'user','draft',$itemid,$callbackjs);
+	$recorderhtml =  \filter_poodll\poodlltools::fetchHTML5SnapshotCamera($updatecontrol,350,400,$usercontextid,'user','draft',$itemid,$callbackjs);
 	$instruction = get_string('snaptheninsert', 'tinymce_poodll');
  	break;
+ 	break;
  case 'whiteboard':
- 	$recorderhtml =  \filter_poodll\poodlltools::fetchWhiteboardForSubmission($updatecontrol, $usercontextid,'user','draft',$itemid,400,350,"","",$callbackjs);
+ 	$recorderhtml =  \filter_poodll\poodlltools::fetchWhiteboardForSubmission($updatecontrol, $usercontextid,'user','draft',$itemid,400,350,"","drawingboard",$callbackjs);
 	$recorderhtml = "<div class='jswhiteboard'>" . $recorderhtml . "</div>"; 
 	$instruction = get_string('drawtheninsert', 'tinymce_poodll');
  	break;
@@ -99,7 +100,7 @@ $PAGE->requires->jquery();
 echo $OUTPUT->header();
 ?>
 <div id="tinymce_poodll_container">
-<div style="text-align: center;">
+<div style="text-align: center;display: inline-block;">
 <p id="messageAlert"><?php echo $instruction; ?></p>
 <?php
 echo $recorderhtml;
